tests/neg/i6762b.check
-- [E007] Type Mismatch Error: tests/neg/i6762b.scala:4:39 -------------------------------------------------------------
4 |def f(word: String): Expr[G[String]] = word.toExpr // error
  |                                       ^^^^
  |                                       Found:    Expr[String]
  |                                       Required: Expr[G[String]]
